# serializer version: 1
# name: test_build_matrix_query_constructs_summarizecolumns
  '''
  EVALUATE
  SUMMARIZECOLUMNS(
      dim[City],
      "Sales", [Total Sales]
  )
  '''
# ---
# name: test_build_matrix_query_includes_filters
  '''
  EVALUATE
  CALCULATETABLE(
      SUMMARIZECOLUMNS(
          dim[City],
          "Sales", [Total Sales]
      ),
      dim[City] IN { "Seattle", "Portland" }
  )
  '''
# ---
# name: test_build_matrix_query_supports_expression_filter
  '''
  EVALUATE
  CALCULATETABLE(
      SUMMARIZECOLUMNS(
          dim[City],
          "Sales", [Total Sales]
      ),
      dim[City] <> "Unknown"
  )
  '''
# ---
# name: test_build_matrix_query_with_define
  '''
  DEFINE
  MEASURE Sales[Total Sales] = SUM(Sales[Amount])
  
  EVALUATE
  SUMMARIZECOLUMNS(
      Sales[Region],
      "Total Sales", [Total Sales]
  )
  '''
# ---
